--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-grid-layout": "^1.3.4",
     "react-hook-form": "^7.31.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
