--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.8.2",
     "axios": "^0.27.2",
+    "immutability-helper": "^3.1.1",
     "react": "^18.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.0.0",
     "react-grid-layout": "^1.3.4",
     "react-hook-form": "^7.31.3",
     "react-redux": "^8.0.2",
+    "react-resize-detector": "^7.1.2",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.0.3",
     "redux": "^4.2.0",
