--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-toastify": "^9.0.3",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "sweetalert2": "^11.11.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
